Added Google places command to get places wihin 2,000 meters of location

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "globals": {
     "navigator": false,
     "test": false,
+    "fetch": false,
   },
   "extends": "eslint-config-airbnb",
   "rules": {
